--- a/todo
+++ b/todo
@@ -1,8 +1,6 @@
 present:
-	move independent procedures to aux/
-	move vertex and texture buffers into canvas
-	separate texture coords from vertex buffer
-	multiply matrices for transformations
-	free memory
+	transformations:
+		move sprite with SIMD
+	free memory!
 
 
