--- a/todo
+++ b/todo
@@ -1,5 +1,6 @@
 present:
 	binary canvas file
+	ced: tiles
 	farbfeld fread bad size (test)
 	xlib: modkeys + timer
 	win32: utf-8 + modkeys + timer
@@ -8,4 +9,3 @@ present:
 		d3d (WIP)
 		wayland
 		xcb + vulkan
-
